fixed desktop nav text causing overflow when resizing

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -60,7 +60,7 @@ body {
 	align-items: center;
 	color: black;
 	font-weight: bold;
-	font-size: 1.5rem;
+	font-size: 1rem;
 }
 
 /*flex fix for dropdown mobile menu main text*/
